src/objects/PanoptixCreds__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>clientId__c</fullName>
        <label>clientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <label>clientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Panoptix Credentials</label>
</CustomObject>